# seathru_nerf

./: .buildinfo  .gitignore  CITATION.cff  LICENSE.md  README.md  api.html  genindex.html  index.html  installation.html  intro.html  objects.inv  pyproject.toml  results.html  search.html  searchindex.js  usage.html
.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  intro.doctree  results.doctree  usage.doctree
.github/workflows/: documentation  documentation.yml  linting.yml  tests.yml
_sources/: api.rst.txt  installation.rst.txt  intro.rst.txt  results.rst.txt  usage.rst.txt
docs/: .gitattributes  .gitignore  api.rst  conf.py  index.rst  installation.rst  intro.rst  references.bib  results.rst  usage.rst
docs/html/: ._index.html  .buildinfo  api.html  genindex.html  index.html  installation.html  intro.html  objects.inv  py-modindex.html  results.html  search.html  searchindex.js  usage.html
seathru/: __init__.py  seathru_config.py  seathru_field.py  seathru_fieldheadnames.py  seathru_losses.py  seathru_model.py  seathru_renderers.py  seathru_utils.py
tests/: test_field.py  test_losses.py  test_model.py  test_renderers.py  test_utils.py
